# ObjectIO

./: CMakeLists.txt
include/: circle.h  io_circle.h  io_obj.h  shape.h  triangle.h
src/: circle.cpp  io_circle.cpp  io_obj.cpp  main.cpp  triangle.cpp
